Fix vertscroll overflow.

--- a/css/base.css
+++ b/css/base.css
@@ -489,14 +489,14 @@ div.aligncenter {
 /* Vert scroll gallery */
 .vert-scroll {
   text-align: center;
-  margin: 0 auto 1em;
+  margin: 0 auto;
 }
 .vert-scroll .wp-caption-text {
   margin-left: auto;
   margin-right: auto;
   text-align: left;
   max-width: 900px;
-  margin-bottom: 0;
+  margin-bottom: 1rem;
 }
 .vert-scroll img { max-width: 100%; width: auto; margin-bottom: 0; }
 /* CycleReact gallery  */
